Show omen die from embedded class item.

--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -28,7 +28,7 @@
             <div class="omens-row">
                 <span class="stat-label">{{ localize "MB.Omens" }}:</span>
                 <input class="stat-input" name="data.omens" type="number" value="{{data.omens}}" data-dtype="Number"/>
-                <span class="rule-text omen-rule rollable">{{data.class.omenDie}} {{ localize "MB.PerRest"}}</span>
+                <span class="rule-text omen-rule rollable">{{data.class.data.omenDie}} {{ localize "MB.PerRest"}}</span>
             </div>
             <div class="miseries-row">
                 <label class="stat-label miseries-label">{{ localize "MB.Miseries" }}:</label>
