--- a/templates/armor-sheet.html
+++ b/templates/armor-sheet.html
@@ -15,8 +15,8 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="description">{{ localize "MB.Description" }}</a>
-        <a class="item" data-tab="details">{{ localize "MB.Details" }}</a>
+        <a class="item" data-tab="description">{{ localize "MB.TabDescription" }}</a>
+        <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -48,7 +48,7 @@
 
             {{!-- Armor Current Tier --}}
             <div class="form-group">
-                <label>{{ localize "MB.CurrentTier" }}:</label>
+                <label>{{ localize "MB.ArmorCurrentTier" }}:</label>
                 <select name="data.currentTier">
                     {{#select data.currentTier}}
                         {{#each config.armorTiers as |name tier|}}
@@ -60,7 +60,7 @@
 
             {{!-- Armor Max Tier --}}
             <div class="form-group">
-                <label>{{ localize "MB.MaxTier" }}:</label>
+                <label>{{ localize "MB.ArmorMaxTier" }}:</label>
                 <select name="data.maxTier">
                     {{#select data.maxTier}}
                         {{#each config.armorTiers as |name tier|}}
