--- a/templates/class-sheet.html
+++ b/templates/class-sheet.html
@@ -11,7 +11,7 @@
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
         <a class="item" data-tab="abilities">{{ localize "MB.Abilities" }}</a>
-        <a class="item" data-tab="details">{{ localize "MB.Details" }}</a>        
+        <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>        
     </nav>
 
     {{!-- Sheet Body --}}
