--- a/templates/follower-sheet.html
+++ b/templates/follower-sheet.html
@@ -21,10 +21,10 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="description">{{ localize "MB.Description" }}</a>
-        <a class="item" data-tab="details">{{ localize "MB.Details" }}</a>
-        <a class="item" data-tab="violence">{{ localize "MB.Violence" }}</a>
-        <a class="item" data-tab="treasures">{{ localize "MB.Treasures" }}</a>
+        <a class="item" data-tab="description">{{ localize "MB.TabDescription" }}</a>
+        <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>
+        <a class="item" data-tab="violence">{{ localize "MB.TabViolence" }}</a>
+        <a class="item" data-tab="treasures">{{ localize "MB.TabTreasures" }}</a>
     </nav>
 
     {{!-- Sheet Body --}}
@@ -44,19 +44,19 @@
 
             {{!-- Trait --}}
             <div class="form-group">
-                <label>{{ localize "MB.Trait" }}:</label>
+                <label>{{ localize "MB.FollowerTrait" }}:</label>
                 <input type="text" name="data.trait" value="{{data.trait}}" placeholder="None" data-dtype="String" />
             </div>
 
             {{!-- Speciality --}}
             <div class="form-group">
-                <label>{{ localize "MB.Speciality" }}:</label>
+                <label>{{ localize "MB.FollowerSpeciality" }}:</label>
                 <input type="text" name="data.speciality" value="{{data.speciality}}" placeholder="None" data-dtype="String" />
             </div>
 
             {{!-- Value --}}
             <div class="form-group">
-                <label>{{ localize "MB.Value" }}:</label>
+                <label>{{ localize "MB.FollowerValue" }}:</label>
                 <input type="text" name="data.value" value="{{data.value}}" placeholder="None" data-dtype="String" />
             </div>
 
@@ -182,7 +182,7 @@
                         <h4 class="item-name">
                             {{item.name}}
                             {{#ifEq item.type 'container'}}
-                              ({{localize 'MB.Holds'}} {{item.data.capacity}})
+                              ({{localize 'MB.ContainerHolds'}} {{item.data.capacity}})
                             {{/ifEq}}
                         </h4>
                         <div class="item-buttons">
