--- a/templates/misc-sheet.html
+++ b/templates/misc-sheet.html
@@ -15,8 +15,8 @@
 
     {{!-- Sheet Tab Navigation --}}
     <nav class="sheet-tabs tabs" data-group="primary">
-        <a class="item" data-tab="description">{{ localize "MB.Description" }}</a>
-        <a class="item" data-tab="details">{{ localize "MB.Details" }}</a>        
+        <a class="item" data-tab="description">{{ localize "MB.TabDescription" }}</a>
+        <a class="item" data-tab="details">{{ localize "MB.TabDetails" }}</a>        
     </nav>
 
     {{!-- Sheet Body --}}
