--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -1315,3 +1315,38 @@ a.inline-roll {
   white-space: nowrap;
   word-break: break-all;
 }
+/* ====================== */
+/* Roll Cards */
+/* ====================== */
+.roll-card {
+  border: 1px solid #ffe800;
+}
+.roll-card .card-title {
+  background: #ffe800;
+  color: black;
+  text-align: center;
+  font-size: 24px;
+}
+/* #chat-log .message */
+.roll-card .item-row {
+  font-family: "Special Elite";
+  font-size: 14px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  color: white;
+}
+.roll-card .roll-title {
+  text-align: center;
+  text-transform: capitalize;
+}
+.roll-card .roll-result {
+  border: 1px solid gray;
+  margin-left: 10px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+  padding: 5px;
+  color: white;  
+  font-size: 20px;
+}
