--- a/templates/defend-roll-card.html
+++ b/templates/defend-roll-card.html
@@ -3,10 +3,12 @@
     <div class="card-title">
         {{localize 'MB.Defend'}}
     </div>
-    <div class="item-row">
-        <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-        {{item.name}}
-    </div>
+    {{#if item}}
+        <div class="item-row">
+            <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+            {{item.name}}
+        </div>
+    {{/if}}
     <div class="defend-roll">
         <div class="roll-title">
             {{localize 'MB.Defend'}}: {{defenseRoll.formula}}
