--- a/templates/attack-roll-card.html
+++ b/templates/attack-roll-card.html
@@ -3,12 +3,12 @@
     <div class="card-title">
         {{localize weaponTypeKey}} {{localize 'MB.Attack'}}
     </div>
-    {{#if item}}
+    {{#each items as |item id|}}
         <div class="item-row">
             <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
             {{item.name}}
         </div>
-    {{/if}}
+    {{/each}}
     <div class="attack-roll">
         <div class="roll-title">
             {{localize 'MB.Attack'}}: {{attackRoll.formula}}
