--- a/templates/defend-roll-card.html
+++ b/templates/defend-roll-card.html
@@ -3,12 +3,12 @@
     <div class="card-title">
         {{localize 'MB.Defend'}}
     </div>
-    {{#if item}}
+    {{#each items as |item id|}}
         <div class="item-row">
             <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
             {{item.name}}
         </div>
-    {{/if}}
+    {{/each}}
     <div class="defend-roll">
         <div class="roll-title">
             {{localize 'MB.Defend'}}: {{defenseRoll.formula}}
