--- a/templates/attack-roll-card.html
+++ b/templates/attack-roll-card.html
@@ -6,31 +6,31 @@
     {{#each items as |item id|}}
         <div class="item-row">
             <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-            {{item.name}}
+            <span class="item-name">{{item.name}}</span>
         </div>
     {{/each}}
     <div class="attack-roll">
         <div class="roll-title">
-            {{localize 'MB.Attack'}}: {{attackRoll.formula}}
+            <span>{{localize 'MB.Attack'}}: {{attackRoll.formula}}</span>
         </div>
         <div class="roll-result">
-            {{attackRoll.total}}
+            <span>{{attackRoll.total}}</span>
         </div>
     <div class="damage-roll">
         <div class="roll-title">
-            {{localize 'MB.Damage'}}: {{damageRoll.formula}}
+            <span>{{localize 'MB.Damage'}}: {{damageRoll.formula}}</span>
         </div>
         <div class="roll-result">
-            {{damageRoll.total}}
+            <span>{{damageRoll.total}}</span>
         </div>
     </div>
     {{#if targetArmorRoll}}
         <div class="target-armor-roll">
             <div class="roll-title">
-                {{localize 'MB.TargetArmor'}}: {{targetArmorRoll.formula}}
+                <span>{{localize 'MB.TargetArmor'}}: {{targetArmorRoll.formula}}</span>
             </div>
             <div class="roll-result">
-                {{targetArmorRoll.total}}
+                <span>{{targetArmorRoll.total}}</span>
             </div>
         </div>
     {{/if}}
