--- a/templates/defend-roll-card.html
+++ b/templates/defend-roll-card.html
@@ -6,22 +6,22 @@
     {{#each items as |item id|}}
         <div class="item-row">
             <img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-            {{item.name}}
+            <span class="item-name">{{item.name}}</span>
         </div>
     {{/each}}
     <div class="defend-roll">
         <div class="roll-title">
-            {{localize 'MB.Defend'}}: {{defenseRoll.formula}}
+            <span>{{localize 'MB.Defend'}}: {{defenseRoll.formula}}</span>
         </div>
         <div class="roll-result">
-            {{defenseRoll.total}}
+            <span>{{defenseRoll.total}}</span>
         </div>
     <div class="damage-roll">
         <div class="roll-title">
-            {{localize 'MB.Damage'}}: {{damageRoll.formula}}
+            <span>{{localize 'MB.Damage'}}: {{damageRoll.formula}}</span>
         </div>
         <div class="roll-result">
-            {{damageRoll.total}}
+            <span>{{damageRoll.total}}</span>
         </div>
     </div>
     {{#if armorRoll}}
@@ -30,7 +30,7 @@
                 {{localize 'MB.Armor'}}: {{armorRoll.formula}}
             </div>
             <div class="roll-result">
-                {{armorRoll.total}}
+                <span>{{armorRoll.total}}</span>
             </div>
         </div>
     {{/if}}
