Add morale button to Follower sheet, and clean up code.

--- a/styles/morkborg.css
+++ b/styles/morkborg.css
@@ -1401,7 +1401,7 @@ a.inline-roll {
   color: white;  
   font-size: 20px;
 }
-.roll-card .morale-effect-text {
+.roll-card .morale-outcome-text {
   font-family: "Old Cupboard", serif;
   font-size: 28px;
   text-align: center;
