--- a/templates/follower-sheet.html
+++ b/templates/follower-sheet.html
@@ -15,6 +15,7 @@
                 <input class="stat-input" name="data.hp.current" type="number" value="{{data.hp.current}}" data-dtype="Number"/>
                 /
                 <input class="stat-input" name="data.hp.max" type="number" value="{{data.hp.max}}" data-dtype="Number"/>
+                <button type="button" class="roll-button morale rollable">{{localize "MB.Morale"}}</button>
             </div>
         </div>      
     </header>
