--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -7,8 +7,8 @@
         <div class="header-gutter-col">
         </div>
         <div class="header-col2">
-            <div class="charname-row">
-                <input class="charname" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'MB.Name' }}" spellcheck="false"/>                
+            <div class="name-row">
+                <input class="actor-name" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'MB.Name' }}" spellcheck="false"/>                
             </div>
             {{!-- we are cheating a bit here, using the 'item' class usually used on LI elements,
              so we can get the item _id to be found by the common click handler --}}
