--- a/templates/creature-sheet.html
+++ b/templates/creature-sheet.html
@@ -7,9 +7,9 @@
         <div class="header-gutter-col">
         </div>
         <div class="header-col2">
-            <h1 class="creature-name">
-                <input name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'MB.Name' }}"/>
-            </h1>
+            <div class="name-row">
+                <input class="actor-name creature-name" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'MB.Name' }}"/>
+            </div>
             <div class="altname-row">
                 <input class="altname" name="data.alternateName" type="text" value="{{data.alternateName}}" placeholder="{{ localize 'MB.AlternateName' }}"/>
             </div>            
