--- a/templates/class-sheet.html
+++ b/templates/class-sheet.html
@@ -4,7 +4,7 @@
     <header class="sheet-header">
         <img class="profile-img" src="{{item.img}}" data-edit="img" title="{{item.name}}" />
         <div class="header-fields">
-            <h1 class="charname"><input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}" /></h1>
+            <h1 class="item-name"><input name="name" type="text" value="{{item.name}}" placeholder="{{ localize 'MB.ItemName' }}" /></h1>
         </div>
     </header>
 
