--- a/templates/add-item-dialog.html
+++ b/templates/add-item-dialog.html
@@ -1,10 +1,10 @@
-<form>
+<form class="custom-dialog">
     <div class="form-group">
-      <label>Name</label>
-      <input type="text" name="itemname" value="" placeholder="Name" data-dtype="String" />
+      <label>{{localize 'MB.Name'}}:</label>
+      <input type="text" name="itemname" value="" placeholder="{{localize 'MB.Name'}}" data-dtype="String" />
     </div>     
     <div class="form-group">
-      <label>Type</label>
+      <label>{{localize 'MB.Type'}}:</label>
       <br>
       <select name="itemtype" class="add-type">
         <option value="armor">Armor</option>
