--- a/templates/morale-roll-card.html
+++ b/templates/morale-roll-card.html
@@ -19,7 +19,7 @@
                 </div>
             </div>
         {{/if}}
-        <div class="morale-outcome-text">
+        <div class="outcome-text">
             {{actor.name}} {{outcomeText}}
         </div>
     </div>
